[package]
name = "baracuda-kernels-bench"
version = "0.0.1-alpha.64"
description = "Benchmark harness for baracuda-kernels — CUDA-event-timed throughput sweeps across GEMM, Flash Attention, and Conv2d at LLM-typical / ResNet-typical shapes. Phase 10 Milestone 10.1 of the baracuda CUDA stack."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cuda", "gpu", "ml", "benchmark", "tflops"]
categories = ["api-bindings", "science"]
publish = false

[features]
# Arch features forwarded to baracuda-kernels. `sm89` enables the FP8
# GEMM benches; without it the FP8 bench-group is skipped at runtime.
default = []
sm80 = ["baracuda-kernels/sm80"]
sm89 = ["baracuda-kernels/sm89"]
sm90a = ["baracuda-kernels/sm90a"]

# cuDNN integration — gates the Conv2d bench. The Conv2d bench file
# compiles with this feature off (becomes a no-op `main`) so the bench
# binary still builds, but no work runs.
cudnn = ["baracuda-kernels/cudnn"]

# Phase 42 — FA2 backend on `FlashSdpaPlan`. Gates the `sdpa_vs_fa2`
# bench. Off by default; flip on alongside `sm80` to compile the FA2
# kernel set + run the A/B sweep against baracuda's bespoke Flash.
fa2 = ["baracuda-kernels/fa2"]

# Phase 43 — `HyperConnectionPlan` (vendored mHC.cu). Gates the
# `hyper_connection` bench. Off by default; flip on alongside `sm80`
# to compile the mHC kernel set + run the speedup-claim validation
# against a naive baracuda residual baseline.
mhc = ["baracuda-kernels/mhc"]

# Phase 44 — CUDA-L2 (deepreinforce-ai/CUDA-L2) HGEMM kernel probes.
# Compiles two of CUDA-L2's 3090-tuned shape variants (M=128 and
# M=2048 at N=K=4096, f16/fp32-acc) via `build.rs` and exposes them
# to the `gemm_vs_cuda_l2` bench for head-to-head timing vs cuBLAS
# and baracuda's CUTLASS path. Off by default; requires CUTLASS
# headers (already a workspace dep via baracuda-cutlass-sys). The
# bench file falls back to documentation-only mode when this feature
# is off (records the reference numbers from the standalone probe
# runs under `external/cuda-l2-probes/`).
cuda_l2 = []

# Phase 44c — ozIMMU variant bench. Gates the `gemm_ozaki_variants`
# bench, which times Base / EF / RN / H ozIMMU dispatch at LLM-typical
# FP64 shapes via `baracuda-ozimmu`. Off by default; flip on to compile
# the ozIMMU CUDA static archive (~12 s nvcc cost) and run the A/B/C/D
# comparison.
ozimmu = ["dep:baracuda-ozimmu"]

[dependencies]
baracuda-kernels = { workspace = true }
baracuda-kernels-types = { workspace = true }
baracuda-driver = { workspace = true }
baracuda-cutlass = { workspace = true }
baracuda-cublas = { workspace = true }
baracuda-cublas-sys = { workspace = true }
baracuda-cudnn = { workspace = true, features = ["half-crate"] }
baracuda-types = { workspace = true, features = ["half-crate", "f8-crate"] }
# Phase 44c — optional, gated behind the `ozimmu` feature on this crate.
baracuda-ozimmu = { workspace = true, optional = true, features = ["build-vendor"] }
half = { workspace = true }
# Phase 73.1 — JSON-baseline loader (PytorchBaseline). Pulls in serde +
# serde_json directly rather than adding to the workspace deps because
# this bench crate is `publish = false` — the dep doesn't reach
# downstream consumers (per `feedback_dep_budget`).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
# Phase 44 — only used when the `cuda_l2` feature is enabled to
# compile the CUDA-L2 wrapper .cu files via the same nvcc-discovery
# path as baracuda-kernels-sys. Cheap to depend on unconditionally
# (build script is a no-op without the feature).
baracuda-forge = { workspace = true }
# Phase 44 — `baracuda-cutlass-sys` exposes `DEP_CUTLASS_INCLUDE` to
# downstream build scripts. We need it (the CUDA-L2 wrappers
# `#include <cute/tensor.hpp>`).
baracuda-cutlass-sys = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

# Criterion's `#[bench]` story requires explicit `[[bench]]` entries
# with `harness = false`. Each entry maps to one file under `benches/`.
#
# Phase 10 (baseline): gemm / flash_attention / conv2d — baracuda-only
# self-bench groups.
# Phase 29 (cross-impl): the `*_vs_cublas` / `*_vs_cudnn` / `mmvq` /
# `softmax` / `layernorm` / `rmsnorm` / `pool` / `reductions` /
# `elementwise` benches that compare baracuda against the corresponding
# reference library (or self-bench in the no-reference case). The
# Phase 29 benches share the same harness shape as the Phase 10 ones
# and reuse `setup_device` / `time_with_events` / `warmup` from
# `baracuda_kernels_bench`.

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "flash_attention"
harness = false

[[bench]]
name = "conv2d"
harness = false

# Phase 29 cross-implementation benches.
[[bench]]
name = "gemm_vs_cublas"
harness = false

[[bench]]
name = "mmvq"
harness = false

[[bench]]
name = "softmax_vs_cudnn"
harness = false

[[bench]]
name = "layernorm_vs_cudnn"
harness = false

[[bench]]
name = "rmsnorm"
harness = false

[[bench]]
name = "conv2d_vs_cudnn"
harness = false

[[bench]]
name = "pool_vs_cudnn"
harness = false

[[bench]]
name = "reductions_vs_cudnn"
harness = false

[[bench]]
name = "elementwise"
harness = false

[[bench]]
name = "sdpa_gqa"
harness = false

# Phase 42 — FA2 vs bespoke Flash A/B (requires `fa2` feature).
[[bench]]
name = "sdpa_vs_fa2"
harness = false

# Phase 43 — HyperConnectionPlan vs naive residual baseline. Requires
# the `mhc` feature to do anything useful (the bench file builds a
# no-op `main` without it).
[[bench]]
name = "hyper_connection"
harness = false

# Phase 44 — CUDA-L2 vs cuBLAS / baracuda HGEMM head-to-head. The
# bench compiles + runs in two modes:
#   • Without `cuda_l2` feature: documents pre-measured reference
#     numbers from the standalone probes under
#     `external/cuda-l2-probes/`. Builds clean, runs cuBLAS +
#     baracuda paths, skips the CUDA-L2 timing arm.
#   • With `cuda_l2` feature: build.rs compiles the wrapper .cu
#     files and the bench includes a live CUDA-L2 timing arm.
[[bench]]
name = "gemm_vs_cuda_l2"
harness = false

# Phase 44c — ozIMMU variant A/B/C/D timing.
[[bench]]
name = "gemm_ozaki_variants"
harness = false

# Phase 73.8 — new bench files. baracuda-only self-benches with PyTorch
# references via the frozen JSON baseline; no cuDNN/cuBLAS equivalents.
[[bench]]
name = "concat"
harness = false

[[bench]]
name = "embedding"
harness = false

[[bench]]
name = "masked_fill"
harness = false

[package.metadata.docs.rs]
# This crate is a bench harness — no docs to publish. Keep the metadata
# minimal so docs.rs doesn't try to build benchmarks.
all-features = false
no-default-features = true

[lints]
workspace = true
